--- a/css/main.css
+++ b/css/main.css
@@ -232,12 +232,13 @@ h1, h2, h3, h4, h5, h6, p, ul{
 }
 .portfolio-example__illustration{ 
     padding: 1.5em 2em 0; 
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 .portfolio-example__illustration img{
     position: relative;
     bottom: -4px;
     width: 100%;
+    max-width: 658px;
     border-radius: 5px 5px 0 0;
 }
 
@@ -250,12 +251,13 @@ h1, h2, h3, h4, h5, h6, p, ul{
 .testimonial-card{
     display: flex;
     flex-direction: column;
-    max-width: 300px;
-    min-height: 248px;
+    max-width: 420px;
+    min-height: 313px;
     flex-shrink: 0;
     border: solid 1px var(--gray-clr);
     padding: 1.5em;
     border-radius: 5px;
+    box-sizing: border-box;
 }
 .testimonial-card:not(:last-child){ margin-bottom: 2em; }
 .testimonial-card__header{
@@ -288,7 +290,6 @@ h1, h2, h3, h4, h5, h6, p, ul{
     display: flex;
     flex-direction: column;
 }
-.main-footer__section{ min-width: 150px;}
 .main-footer__section:not(:last-child){ margin-bottom: 1.5em; }
 .main-footer__section___title{ 
     padding: .5em 0;
@@ -299,7 +300,7 @@ h1, h2, h3, h4, h5, h6, p, ul{
     line-height: 1.5;
     color: var(--matte-black);
 }
-.main-footer__section___content:last-child{ margin-top: 1em; }
+.main-footer__section___content:last-child{ margin-top: 1.25em; }
 .main-footer__list{ list-style: none; }
 .main-footer__list-item{
     display: inline-block;
@@ -451,7 +452,7 @@ h1, h2, h3, h4, h5, h6, p, ul{
         flex-direction: row;
         align-items: flex-start;
         padding-bottom: 2em;
-        overflow-x: scroll;
+        overflow-x: auto;
     }
     .testimonials-section .testimonial-card{
         margin: 0;
@@ -484,7 +485,8 @@ h1, h2, h3, h4, h5, h6, p, ul{
     }
     .hero .container{ 
         grid-template-columns: repeat(2, 1fr);
-        padding: 3em 0; 
+        justify-items: center;
+        padding-bottom: 5.5em;
     }
     .hero__introduction{ 
         grid-column: 1;
@@ -495,7 +497,7 @@ h1, h2, h3, h4, h5, h6, p, ul{
         grid-column: 2;
         position: static;
         width: 110%;
-        max-width: 120%;
+        max-width: 838px;
     }
     .hero__introduction,
     .hero__illustration{
@@ -518,18 +520,21 @@ h1, h2, h3, h4, h5, h6, p, ul{
     .advantage-section__list{
         display: flex;
         justify-content: space-between;
+        margin: 0 auto;
     }
     .advantage-section__list-item{ max-width: 30%; }
     .portfolio-example .container{
         grid-template-columns: 40% 60%;
+        justify-items: center;
     }
     .main-footer .container{
-        justify-content: center;
+        display: grid;
+        grid-template-columns: 1fr repeat(4, 15%);
+        justify-content: unset;
     }
-    .main-footer__section:first-child{
-        width: 22%;
-        padding-right: 1em;
-        box-sizing: border-box;
-    }
-    .main-footer__section:not(:first-child){ width: 10%; }
 }
+@media screen and (min-width: 1200px){
+    html{ font-size: 17px; }
+    .portfolio-example__description{ padding: 0 0 0 2em; }
+}
+@media screen and (min-width: 3000px){ html{ font-size: 20px; } }
