--- a/css/main.css
+++ b/css/main.css
@@ -40,8 +40,63 @@ h1, h2, h3, h4, h5, h6, p, ul{
     color: var(--blue-clr);
     font-weight: 700;
 }
+/* ==================== */
+.navbar__item .link,
+.main-footer__list-item,
+.default-link{ 
+    position: relative;
+}
+.logo a::after,
+.form__terms___link::after,
+.link-signin::after,
+.navbar__item .link::after,
+.main-footer__list-item::after,
+.default-link::after{
+    content: "";
+    position: absolute;  
+    display: inline-block;
+    width: 0%;
+    height: 2px;
+    background: currentColor;
+    transition: width .2s ease-in;
+}
+.link-signin,
+.form__terms___link,
+.logo a{
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+}
+.form__terms___link::after,
+.link-signin::after,
+.logo a::after{
+    left: 0%;
+    bottom: -3px;
+}
+.navbar__item .link::after{
+    left: 1em;
+    bottom: .75em;
+}
+.main-footer__list-item::after{
+    left: 0%;
+    bottom: .55em;
+}
+.default-link::after{
+    left: 1em;
+    top: calc(100% - 1em);
+}
+.form__terms___link:focus::after,
+.link-signin:focus::after,
+.logo a:focus::after{ 
+    width: 100%; 
+}
+.navbar__item .link:focus::after{ width: calc(100% - 2em); }
+.main-footer__list-item:focus::after{ width: calc(100% - .75em); }
+.default-link:focus::after{ width: calc(100% - 2em); }
+/* ==================== */
 .default-btn{
     position: relative;
+    z-index: 1;
     display: inline-block;
     height: max-content;
     cursor: pointer;
@@ -54,6 +109,30 @@ h1, h2, h3, h4, h5, h6, p, ul{
     border-radius: 5px;
     padding: 1em 1.75em;
 }
+/* ---------- */
+.default-btn:not(.nav-btn)::before{
+    content: "";
+    position: absolute;
+    z-index: -1;
+    inset: 0;
+    display: block;
+    width: 0%;
+    height: 100%;
+    opacity: 0;
+    border-radius: 5px;
+    border: none;
+    transition: width .2s ease-in;
+    outline: solid 1px currentColor;
+}
+.default-btn:not(.nav-btn).--bg-white::before{ background-color: var(--blue-clr); }
+.default-btn:not(.nav-btn).--bg-blue::before{ background-color: white; }
+.default-btn:not(.nav-btn).--bg-blue:focus{ color: var(--blue-clr); }
+.default-btn:not(.nav-btn).--bg-white:focus{ color: white; }
+.default-btn:not(.nav-btn):focus::before{ 
+    opacity: 1;
+    width: 100%; 
+}
+/* --------------- */
 .default-btn.--bg-blue{
     background-color: var(--blue-clr);
     color: white;
@@ -238,13 +317,11 @@ h1, h2, h3, h4, h5, h6, p, ul{
 }
 .portfolio-example__illustration{ 
     padding: 1.5em 2em 0; 
-    /* overflow: hidden; */
 }
 .portfolio-example__illustration img{
     position: relative;
     bottom: -4px;
     width: 100%;
-    max-width: 658px;
     border-radius: 5px 5px 0 0;
 }
 
@@ -258,7 +335,6 @@ h1, h2, h3, h4, h5, h6, p, ul{
     display: flex;
     flex-direction: column;
     max-width: 420px;
-    min-height: 313px;
     flex-shrink: 0;
     border: solid 1px var(--gray-clr);
     padding: 1.5em;
@@ -286,7 +362,7 @@ h1, h2, h3, h4, h5, h6, p, ul{
 }
 .testimonial-card-btn{
     width: 100%;
-    margin-top: auto;
+    margin-top: 1em;
     font-weight: 700;
     box-sizing: border-box;
 }
@@ -346,6 +422,7 @@ h1, h2, h3, h4, h5, h6, p, ul{
 .form input[aria-invalid="true"]{ border-color: red; }
 .form-terms-box{
     display: flex;
+    padding: .25em;
     margin-top: 2em;
 }
 .form-terms-box label{
@@ -363,9 +440,15 @@ h1, h2, h3, h4, h5, h6, p, ul{
     height: max-content;
 }
 #form__terms{ 
+    position: relative;
+    z-index: 1;
     width: var(--input-width);
     height: var(--input-height);
     opacity: 0; 
+}
+#form__terms:focus + .styled-input__checkbox{
+    outline-color: black;
+    transform: scale(1.05);
 }
 .styled-input__checkbox{
     position: absolute;
@@ -377,17 +460,17 @@ h1, h2, h3, h4, h5, h6, p, ul{
     height: var(--input-height);
     background-color: transparent;
     outline: solid 1px var(--gray-clr);
-    border-radius: 5px;
+    border-radius: 3px;
 }
 .styled-input__checkbox::before{
     content: "";
     position: absolute;
     inset: 50%;
     display: inline-block;
-    width: 65%;
+    width: 35%;
     height: 65%;
-    border-bottom: solid 3.5px transparent;
-    border-right: solid 3.5px transparent;
+    border-bottom: solid 2.5px transparent;
+    border-right: solid 2.5px transparent;
     transform: translate(-50%, -60%) rotate(45deg);
     background: transparent;
     box-sizing: border-box;
@@ -431,6 +514,7 @@ h1, h2, h3, h4, h5, h6, p, ul{
     fill: #A9A9A9;
     transition: fill .5s ease-in;
 }
+.password-btn:focus > svg{ fill: black; }
 .password-btn.--active svg{
     fill: var(--blue-clr);
 }
@@ -441,7 +525,6 @@ h1, h2, h3, h4, h5, h6, p, ul{
 .singup-img-box,
 .singup-hero{
     min-width: 430px;
-    max-width: 600px;
 }
 .singup-img-box .src{
     width: 100%;
@@ -498,75 +581,39 @@ h1, h2, h3, h4, h5, h6, p, ul{
 }
 
 .carousel{ overflow: hidden; }
-.carousel .slider{
-    display: flex;
-    max-width: 600px;
-}
+.carousel .slider{ display: flex; }
 .carousel .slider:not(.--no-animation){ transition: transform .5s ease-in; }
 
 @media (hover:hover) and (pointer:fine){
-    .default-btn{ 
-        position: relative; 
-        transition: transform .2s ease-in;
+    .password-btn:hover > svg{ fill: black; }
+    #form__terms:hover + .styled-input__checkbox{
+        outline-color: black;
+        transform: scale(1.05);
     }
-    .default-btn:not(.nav-btn)::before{
-        content: "";
-        position: absolute;
-        inset: 0;
-        display: block;
-        width: 0%;
-        height: 100%;
-        background-color: var(--blue-clr);
-        opacity: .2;
-        border-radius: 5px;
-        transition: width .1s ease-in;
+    .default-btn:not(.nav-btn).--bg-blue:hover{ color: var(--blue-clr); }
+    .default-btn:not(.nav-btn).--bg-white:hover{ color: white; }
+    .default-btn:not(.nav-btn):hover::before{ 
+        opacity: 1;
+        width: 100%; 
     }
-    .default-btn:not(.nav-btn):hover{ transform: scale(1.03); }
-    .default-btn:not(.nav-btn):hover::before{ width: 100%; }
-        
     .navbar__item .link,
     .main-footer__list-item,
     .default-link{ 
-        position: relative;
-        text-decoration: none; 
+        text-decoration: none;
     }
-    .navbar__item .link::after,
-    .main-footer__list-item::after,
-    .default-link::after{
-        content: "";
-        position: absolute;    
-        display: inline-block;
-        width: 0%;
-        height: 2.5px;
-        background: currentColor;
-        transition: width .2s ease-in;
+    .form__terms___link:hover::after,
+    .link-signin:hover::after,
+    .logo a:hover::after{ 
+        width: 100%; 
     }
-    .navbar__item .link::after{
-        left: 1em;
-        bottom: .75em;
-    }
-    .main-footer__list-item::after{
-        left: 0%;
-        bottom: .55em;
-    }
-    .default-link::after{
-        left: 1em;
-        top: calc(100% - 1em);
-    }
-    .navbar__item .link:hover::after{
-        width: calc(100% - 2em);
-    }
-    .main-footer__list-item:hover::after{
-        width: calc(100% - .75em);
-    }
-    .default-link:hover::after{
-        width: calc(100% - 2em);
-    }
+    .navbar__item .link:hover::after{ width: calc(100% - 2em); }
+    .main-footer__list-item:hover::after{ width: calc(100% - .75em); }
+    .default-link:hover::after{ width: calc(100% - 2em); }
 }
 @media screen and (min-width: 576px){ :root{ --content-width: 75%; } }
 @media screen and (min-width: 768px){
     :root{ --content-width: 80%; }
-    .default-btn:not(.testimonial-card .default-btn, .--w-100){ max-width: 200px; }
+    .default-btn:not(.testimonial-card .default-btn, .--w-100){ max-width: 300px; }
     .hero__introduction{ flex-flow: row wrap; }
     .hero__introduction .default-link{ margin-left: 1em; }
     .hero__introduction___advantages{ 
@@ -579,35 +626,45 @@ h1, h2, h3, h4, h5, h6, p, ul{
         align-items: flex-start;
         padding-bottom: 2em;
         overflow-x: auto;
+        width: 90%;
+        margin: 0 0 0 auto;
     }
-    .testimonials-section .testimonial-card{
-        margin: 0;
-    }
-    .testimonial-card:not(:last-child){
-        margin-right: 2em;
-    }
+    .testimonials-section .testimonial-card{ margin: 0; }
+    .testimonial-card:not(:last-child){ margin-right: 2em; }
     .main-footer .container{
-        flex-flow: row wrap;
-        justify-content: center;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        column-gap: 1em;
     }
+    .main-footer__section:first-child{ grid-column: span 2; }
 }
 @media screen and (min-width: 992px){
     .top-header .container{
         flex-wrap: nowrap;
-        padding: 0;
+        padding: 2em 0 0;
     }
+    .js .navbar,
     .navbar{ 
+        visibility: visible;
+        max-height: unset;
         display: inline-block; 
         flex-grow: 1;
         width: auto;
+        margin: 0;
+        padding: .25em;
         background: transparent;
     }
     .nav-btn{ display: none;}
     .navbar__list{ display: flex; }
     .navbar__list .ml-auto{ margin-left: auto; }
+    .navbar__item{ margin: 0;}
+    
     .hero .container,
     .portfolio-example .container{
         display: grid;
+    }
+    .portfolio-example .container{
+        grid-template-columns: minmax(250px, 1fr) 1fr;
     }
     .hero .container{ 
         grid-template-columns: repeat(2, 1fr);
@@ -649,19 +706,11 @@ h1, h2, h3, h4, h5, h6, p, ul{
         margin: 0 auto;
     }
     .advantage-section__list-item{ max-width: 30%; }
-    .portfolio-example .container{
-        grid-template-columns: 40% 60%;
-        justify-items: center;
-    }
-    .main-footer .container{
-        display: grid;
-        grid-template-columns: 1fr repeat(4, 15%);
-        justify-content: unset;
-    }
+    
 }
 @media screen and (min-width: 1200px){
     html{ font-size: 17px; }
-    .portfolio-example__description{ padding: 0 0 0 2em; }
+    .portfolio-example__description{ padding: 0 1.5em 0 2em; }
     .singup-container{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -673,6 +722,8 @@ h1, h2, h3, h4, h5, h6, p, ul{
         box-sizing: border-box;
     }
     .form-container{
+        width: 70%;
+        max-width: 100%;
         margin: unset;
         padding: 1.5em 0;
         justify-self: center;
